--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "@types/react-dom": "16.9.4",
     "axios": "^0.19.0",
     "classnames": "^2.2.6",
+    "node-sass": "^4.13.0",
+    "pacman-react": "^0.0.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-router": "^5.1.2",
